# MIDI-GPT

./: .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  OSC_PROTOCOL_SPEC.md  README.md  complete_fix_script.sh  create_python_library.sh  extract_protobuf_files.py  index.html  midigpt_setup_helper.sh  mkdocs.yml  pyproject.toml  refactor_implementation_plan.md  requirements_base.txt  requirements_training.txt  setup.py  setup_env.py  setup_midigpt.py  setup_with_venv.py  sitemap.xml  test_build.sh
api/: index.html
assets/: extra.css
attribute_controls_guide/: index.html
cmake/: dependencies.cmake
concepts/: index.html
contributing/: index.html
docs/: api.md  attribute_controls_guide.md  concepts.md  contributing.md  encoder_guide.md  examples.md  http.md  implementation_progress.md  index.md  maxmsp_developer_guide.md  models.md  osc.md  quickstart.md  realtime_framework.md  realtime_technical_plan.md  training.md
encoder_guide/: index.html
examples/: index.html
http/: index.html
legacy/: CMakeLists.txt  pyproject.toml
legacy/include/dataset_creation/dataset_manipulation/: bytes_to_file.h
legacy/src/common/data_structures/: encoder_config.h  train_config.h
legacy/src/common/encoder/: attribute_control.h  encoder_all.h  encoder_base.h  tension_model.h
legacy/src/common/midi_parsing/: feature_extraction.h  midi_io.h  util_protobuf.h
legacy/src/dataset_creation/dataset_manipulation/: bytes_to_file.cpp
legacy/src/inference/dataset/: jagged.h
legacy/src/inference/enum/: encoder_types.h
legacy/src/inference/protobuf/: validate.h
legacy/src/inference/sampling/: graph.h  multi_step.h  multi_step_sample.h  sample_internal.h
legacy/src/python/midigpt_legacy/: osc_listen.py  osc_server.py  realtime_gen.py  realtime_state.py
libraries/protobuf/: CMakeLists.txt
libraries/protobuf/src/: enum.proto  midi.proto  midi_internal.proto
midigpt_refactor/: CMakeLists.txt  REFACTOR_CRITIQUE.md  analyze_midi.py  debug_abort.py  debug_beat_length.py  debug_conflict.py  debug_duration.py  debug_parity.py  inspect_tokens.py  pyproject.toml  run_generation.py
midigpt_refactor/.github/workflows/: wheels.yml
midigpt_refactor/convos/: Refactoring MIDI-GPT Step Planner.md
midigpt_refactor/docs/: runtime_benchmark.md  sdpa_benchmark_compare.md
midigpt_refactor/scripts/: bench_runtimes.py  export_gguf.py  export_onnx.py  pack_checkpoint.py  remap_checkpoint.py  reverse_remap_checkpoint.py
midigpt_refactor/src/cpp/io/: midi_reader.cpp
midigpt_refactor/src/cpp/masking/: grammar_constraint.cpp
midigpt_refactor/src/cpp/tokenizer/: decoder.h  encoder.h
midigpt_refactor/src/python/midigpt_refactor/: __init__.py  _converters.py  _types.py
midigpt_refactor/src/python/midigpt_refactor/attributes/: __init__.py  base.py  density.py  key_signature.py  note_duration.py  pitch_class_set.py  pitch_range.py  polyphony.py  quantile.py  silence.py  tension.py
midigpt_refactor/src/python/midigpt_refactor/augmentation/: __init__.py  bar_window.py  base.py  instrument_swap.py  mask_bar.py  track_permutation.py  transpose.py  velocity.py
midigpt_refactor/src/python/midigpt_refactor/compat/: __init__.py  vocab_remap.py
midigpt_refactor/src/python/midigpt_refactor/inference/: __init__.py  engine.py  export_gguf.py  runtimes.py  session.py
midigpt_refactor/src/python/midigpt_refactor/server/: __init__.py  osc_server.py  realtime_gen.py  realtime_state.py
midigpt_refactor/src/python/midigpt_refactor/tokenizer/: __init__.py  checkpoint.py  tokenizer.py
midigpt_refactor/src/python/midigpt_refactor/training/: __init__.py  dataset.py  trainer.py
midigpt_refactor/tests/comparison/: conftest.py  generate_edge_fixtures.py  test_benchmark.py  test_benchmark_extensive.py  test_decode_parity.py  test_generation_extensive.py  test_infill_prompt_parity.py  test_midi_integrity.py  test_modes.py  test_osc_session.py  test_parity_raw.py  test_parity_raw_midi.py  test_step_planner_parity.py  test_tokenization_parity.py
midigpt_refactor/tests/cpp/: test_score.cpp
midigpt_refactor/tests/python/: test_attributes.py  test_augmentation.py  test_converters.py  test_inference.py  test_legacy_weights.py  test_server.py  test_tokenizer.py  test_training.py  test_types.py  test_validation.py
models/: expressive_config.json  expressive_encoder.json  expressive_medium.json  expressive_small.json  ghost_config.json  index.html  prism_encoder.json  train_config.json  yellow_config.json  yellow_encoder.json  yellow_large.json  yellow_medium.json  yellow_small.json
osc/: index.html
python_lib/: midigpt_compat.py
python_scripts/: backfill_wandb.py  benchmark_speed.py  compare_generation.py  compare_models.py  convert.py  create_dataset.py  eval_attribute_controls.py  eval_pretrained.py  hp_search.py  osc_server.py  realtime_gen.py  realtime_state.py  test_hf_checkpoint.py  train.py  train_dataset.py
python_scripts_for_testing/: compare_diagnostics.py  generate_diagnostics.py  midigpt_gen.mid  osc_bar.py  py39.json  pythoninferencetest.py  run_realtime_simulation.sh  simulate_osc_session.py  simulate_realtime_agent.py  step_viz.py  stress_test_osc.py  test_steinberg_inference.py
quickstart/: index.html
scripts/: activate_env.sh  benchmark_speed_job.sh  compile_install.sh  create_dataset.sh  create_dataset_job.sh  diff_etude_avg.py  diff_etude_gen.py  diff_etude_prompt.py  eval_pretrained_gpu_job.sh  eval_pretrained_job.sh  fix_params_and_metro.py  gen_doc_examples.py  gen_midigpt_realtime_patch.py  hp_search.sh  patch_fix.py  probe_model_pass.py  quick_gen_check.py  render_doc_midi_videos.py  train.sh  train_job.sh
search/: search_index.json
slurm/: train_yellow.sh
src/: lib.cpp.bak2  lib_encoder.h
tests/: conftest.py  test_backend_parity.py  test_benchmark.py  test_compilation.py  test_golden.py  test_inference.py  test_inference_benchmark.py  test_mask_augmentation.py  test_module.py  test_realtime.py  test_tokenization_parity.py  test_valid_segments.py
training/: index.html
(+370 files in other folders)
