[build-system]
requires      = ["scikit-build-core>=0.9", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name            = "midigpt"
version         = "0.2.3"
description     = "GPT-2 transformer for symbolic music generation"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
dependencies    = []
authors         = [{ name = "Metacreation Lab" }]
classifiers     = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/Metacreation-Lab/MIDI-GPT"
Paper    = "https://arxiv.org/abs/2501.17011"

[project.optional-dependencies]
inference = ["torch>=2.0", "tqdm>=4.65", "huggingface_hub>=0.22"]
train     = ["midigpt[inference]", "lightning>=2.2",
             "datasets>=2.18", "pyarrow>=15.0", "python-dotenv>=1.0"]
dev       = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]
realtime  = ["midigpt[inference]", "python-osc>=1.8", "flask>=3.0", "flask-socketio>=5.3"]
all       = ["midigpt[realtime,train]"]

[project.scripts]
midigpt-server = "midigpt.osc.server:main"
midigpt-listen = "midigpt.osc.listen:main"

[tool.pytest.ini_options]
markers = [
    "slow: requires real model bundles on disk",
    "inference: requires torch and a real model",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
wheel.packages   = ["src/python/midigpt"]
wheel.exclude    = ["midigpt/osc/studio*"]

[tool.cibuildwheel]
build         = "cp310-* cp311-* cp312-*"
skip          = "*-musllinux_* *-win32 *-manylinux_i686"
build-verbosity = 1
test-extras   = ["inference"]
test-requires = "pytest"
test-command  = 'pytest {project}/tests/python -m "not slow and not inference"'

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
