[build-system]
requires      = ["scikit-build-core>=0.9", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name            = "midigpt_refactor"
version         = "0.1.0"
requires-python = ">=3.10"
dependencies    = []

[project.optional-dependencies]
inference = ["torch>=2.0"]
osc       = ["midigpt_refactor[inference]", "python-osc>=1.8"]
train     = ["midigpt_refactor[inference]", "transformers>=4.40",
             "datasets>=2.18", "pyarrow>=15.0", "accelerate>=0.29"]
dev       = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]
all       = ["midigpt_refactor[osc,train]"]

[project.scripts]
midigpt-refactor-server = "midigpt_refactor.server.osc_server:main"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
wheel.packages   = ["src/python/midigpt_refactor"]

[tool.cibuildwheel]
build-verbosity = 1
test-requires = "pytest"
test-command = "pytest {project}/tests/python"
